{
  "version": 4,
  "terraform_version": "1.11.4",
  "serial": 399,
  "lineage": "81dd4997-db50-0614-973b-e673151f171b",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-010fc6854b20fbff7",
            "arn": "arn:aws:ec2:us-west-2:194722415730:instance/i-0efc45629195cc5e6",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "bastion-instance-profile",
            "id": "i-0efc45629195cc5e6",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "my-aws-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-00db290e59822cc52",
            "private_dns": "ip-10-0-0-36.us-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.36",
            "public_dns": "ec2-34-208-3-63.us-west-2.compute.amazonaws.com",
            "public_ip": "34.208.3.63",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-00af4f704e863c944",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-01eaf551ddcebd4d8",
            "tags": {
              "Name": "eks-bastion"
            },
            "tags_all": {
              "Name": "eks-bastion"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-00ba5fc58d7512e2f"
            ]
          },
          "dependencies": [
            "aws_iam_instance_profile.bastion_instance_profile",
            "aws_iam_role.bastion_role",
            "aws_key_pair.my_key",
            "aws_security_group.bastion_sg",
            "data.aws_ami.amazon_linux",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.eks_vpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "bastion_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:194722415730:security-group/sg-00ba5fc58d7512e2f",
            "description": "Allow SSH access",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-00ba5fc58d7512e2f",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "bastion-sg",
            "name_prefix": "",
            "owner_id": "194722415730",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0f99e96032bca6f8e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.eks_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "eks_api",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:194722415730:security-group/sg-08dde2e3028621dac",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-08dde2e3028621dac",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "terraform-20250424181343680600000012",
            "name_prefix": "terraform-",
            "owner_id": "194722415730",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0f99e96032bca6f8e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.eks_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0ff291b867edbf8cb",
            "arn": "arn:aws:ec2:us-west-2:194722415730:elastic-ip/eipalloc-0ff291b867edbf8cb",
            "association_id": "eipassoc-02d3590482fd93f92",
            "domain": "vpc",
            "id": "eipalloc-0ff291b867edbf8cb",
            "network_border_group": "us-west-2",
            "network_interface": "eni-0b2edd3dfcbf2965c",
            "private_dns": "ip-10-0-0-67.us-west-2.compute.internal",
            "private_ip": "10.0.0.67",
            "public_dns": "ec2-34-208-168-210.us-west-2.compute.amazonaws.com",
            "public_ip": "34.208.168.210",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "eks-nat-eip-0"
            },
            "tags_all": {
              "Name": "eks-nat-eip-0"
            },
            "vpc": true
          }
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0d6156aadba8e3943",
            "arn": "arn:aws:ec2:us-west-2:194722415730:elastic-ip/eipalloc-0d6156aadba8e3943",
            "association_id": "eipassoc-0fe18237539289ff7",
            "domain": "vpc",
            "id": "eipalloc-0d6156aadba8e3943",
            "network_border_group": "us-west-2",
            "network_interface": "eni-0955fad6f427d51f6",
            "private_dns": "ip-10-0-1-163.us-west-2.compute.internal",
            "private_ip": "10.0.1.163",
            "public_dns": "ec2-34-218-133-199.us-west-2.compute.amazonaws.com",
            "public_ip": "34.218.133.199",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "eks-nat-eip-1"
            },
            "tags_all": {
              "Name": "eks-nat-eip-1"
            },
            "vpc": true
          }
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-07e572a1a193bda4f",
            "arn": "arn:aws:ec2:us-west-2:194722415730:elastic-ip/eipalloc-07e572a1a193bda4f",
            "association_id": "eipassoc-01e8e201e417e06d6",
            "domain": "vpc",
            "id": "eipalloc-07e572a1a193bda4f",
            "network_border_group": "us-west-2",
            "network_interface": "eni-078774197d251e5dd",
            "private_dns": "ip-10-0-2-232.us-west-2.compute.internal",
            "private_ip": "10.0.2.232",
            "public_dns": "ec2-35-83-189-188.us-west-2.compute.amazonaws.com",
            "public_ip": "35.83.189.188",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "eks-nat-eip-2"
            },
            "tags_all": {
              "Name": "eks-nat-eip-2"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:194722415730:internet-gateway/igw-04cdc359d597dd29a",
            "id": "igw-04cdc359d597dd29a",
            "owner_id": "194722415730",
            "tags": {
              "Name": "eks-igw"
            },
            "tags_all": {
              "Name": "eks-igw"
            },
            "vpc_id": "vpc-0f99e96032bca6f8e"
          },
          "dependencies": [
            "module.vpc.aws_vpc.eks_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0ff291b867edbf8cb",
            "association_id": "eipassoc-02d3590482fd93f92",
            "connectivity_type": "public",
            "id": "nat-0533234d274cb8f1f",
            "network_interface_id": "eni-0b2edd3dfcbf2965c",
            "private_ip": "10.0.0.67",
            "public_ip": "34.208.168.210",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-01eaf551ddcebd4d8",
            "tags": {
              "Name": "eks-nat-0"
            },
            "tags_all": {
              "Name": "eks-nat-0"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.eks_vpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0d6156aadba8e3943",
            "association_id": "eipassoc-0fe18237539289ff7",
            "connectivity_type": "public",
            "id": "nat-078adf566c9688221",
            "network_interface_id": "eni-0955fad6f427d51f6",
            "private_ip": "10.0.1.163",
            "public_ip": "34.218.133.199",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-03555c38c7f940aea",
            "tags": {
              "Name": "eks-nat-1"
            },
            "tags_all": {
              "Name": "eks-nat-1"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.eks_vpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-07e572a1a193bda4f",
            "association_id": "eipassoc-01e8e201e417e06d6",
            "connectivity_type": "public",
            "id": "nat-003db52eb075906d9",
            "network_interface_id": "eni-078774197d251e5dd",
            "private_ip": "10.0.2.232",
            "public_ip": "35.83.189.188",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0871e847eb6a1dfb0",
            "tags": {
              "Name": "eks-nat-2"
            },
            "tags_all": {
              "Name": "eks-nat-2"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.eks_vpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:194722415730:route-table/rtb-054420dc986c22929",
            "id": "rtb-054420dc986c22929",
            "owner_id": "194722415730",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0533234d274cb8f1f",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "eks-private-rt-0"
            },
            "tags_all": {
              "Name": "eks-private-rt-0"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f99e96032bca6f8e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_nat_gateway.nat",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.eks_vpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:194722415730:route-table/rtb-0daf475c9c16ca095",
            "id": "rtb-0daf475c9c16ca095",
            "owner_id": "194722415730",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-078adf566c9688221",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "eks-private-rt-1"
            },
            "tags_all": {
              "Name": "eks-private-rt-1"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f99e96032bca6f8e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_nat_gateway.nat",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.eks_vpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:194722415730:route-table/rtb-09a2578de2243fd8f",
            "id": "rtb-09a2578de2243fd8f",
            "owner_id": "194722415730",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-003db52eb075906d9",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "eks-private-rt-2"
            },
            "tags_all": {
              "Name": "eks-private-rt-2"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f99e96032bca6f8e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_nat_gateway.nat",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.eks_vpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:194722415730:route-table/rtb-00de52985c296284d",
            "id": "rtb-00de52985c296284d",
            "owner_id": "194722415730",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-04cdc359d597dd29a",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "eks-public-rt"
            },
            "tags_all": {
              "Name": "eks-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f99e96032bca6f8e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_vpc.eks_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0815bef1dcaeda9f1",
            "route_table_id": "rtb-054420dc986c22929",
            "subnet_id": "subnet-0726cec0dd7eaf2b4"
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_nat_gateway.nat",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.eks_vpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-073fcd40888f7ce61",
            "route_table_id": "rtb-0daf475c9c16ca095",
            "subnet_id": "subnet-0ff424ab671f61943"
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_nat_gateway.nat",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.eks_vpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e067e09b8936f74e",
            "route_table_id": "rtb-09a2578de2243fd8f",
            "subnet_id": "subnet-0f6d7ad85b4140850"
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_nat_gateway.nat",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.eks_vpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a8cf5cef598e95ea",
            "route_table_id": "rtb-00de52985c296284d",
            "subnet_id": "subnet-01eaf551ddcebd4d8"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.eks_vpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e81a957f7ed1bf5e",
            "route_table_id": "rtb-00de52985c296284d",
            "subnet_id": "subnet-03555c38c7f940aea"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.eks_vpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0aa2d5aeaa432eca0",
            "route_table_id": "rtb-00de52985c296284d",
            "subnet_id": "subnet-0871e847eb6a1dfb0"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.eks_vpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:194722415730:subnet/subnet-0726cec0dd7eaf2b4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0726cec0dd7eaf2b4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "194722415730",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "eks-private-0",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "eks-private-0",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0f99e96032bca6f8e"
          },
          "dependencies": [
            "module.vpc.aws_vpc.eks_vpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:194722415730:subnet/subnet-0ff424ab671f61943",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ff424ab671f61943",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "194722415730",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "eks-private-1",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "eks-private-1",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0f99e96032bca6f8e"
          },
          "dependencies": [
            "module.vpc.aws_vpc.eks_vpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:194722415730:subnet/subnet-0f6d7ad85b4140850",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2c",
            "availability_zone_id": "usw2-az3",
            "cidr_block": "10.0.5.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f6d7ad85b4140850",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "194722415730",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "eks-private-2",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "eks-private-2",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0f99e96032bca6f8e"
          },
          "dependencies": [
            "module.vpc.aws_vpc.eks_vpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:194722415730:subnet/subnet-01eaf551ddcebd4d8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01eaf551ddcebd4d8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "194722415730",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "eks-public-0",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "eks-public-0",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0f99e96032bca6f8e"
          },
          "dependencies": [
            "module.vpc.aws_vpc.eks_vpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:194722415730:subnet/subnet-03555c38c7f940aea",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03555c38c7f940aea",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "194722415730",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "eks-public-1",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "eks-public-1",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0f99e96032bca6f8e"
          },
          "dependencies": [
            "module.vpc.aws_vpc.eks_vpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:194722415730:subnet/subnet-0871e847eb6a1dfb0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2c",
            "availability_zone_id": "usw2-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0871e847eb6a1dfb0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "194722415730",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "eks-public-2",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "eks-public-2",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0f99e96032bca6f8e"
          },
          "dependencies": [
            "module.vpc.aws_vpc.eks_vpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "eks_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:194722415730:vpc/vpc-0f99e96032bca6f8e",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0ef305cb2ef7fc68c",
            "default_route_table_id": "rtb-0fb1732630137c5cb",
            "default_security_group_id": "sg-0cf27cc2c4bdc820b",
            "dhcp_options_id": "dopt-04599e2b835920a63",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0f99e96032bca6f8e",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0fb1732630137c5cb",
            "owner_id": "194722415730",
            "tags": {
              "Name": "eks-vpc"
            },
            "tags_all": {
              "Name": "eks-vpc"
            }
          }
        }
      ]
    }
  ]
}